<resources>
    <string name="app_name">DA1APP</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chào mừng bạn đến với shop</string>
    <string name="nav_header_subtitle">mottuanvaity@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_find">Find</string>
    <string name="facebook_app_id">310862666416251</string>
    <string name="fb_login_protocol_scheme">fb310862666416251</string>
    <string name="home">Home</string>
    <string name="main">Main</string>
    <string name="cpu">Cpu</string>
    <string name="ram">Ram</string>
    <string name="psu">Nguồn</string>
    <string name="ssd">Ssd</string>
    <string name="hdd">Hdd</string>
    <string name="case1">Case</string>
    <string name="information">Thông Tin</string>
    <string name="exit">Thoát</string>
    <string name="thongtinbanquyen">Thông tin bản quyền</string>
    <string name="textinformation1">Phần mềm thuộc bản quyền của EX Computer</string>
    <string name="textinformation2">Xin vui lòng không copy bản quyền máy tính</string>
    <string name="informationemail">Email : mottuanvaity@gmail.com</string>
    <string name="informationphone">Phone : 0123456789</string>
    <string name="informationlocation">Location : Hà Nội</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Shop now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="gpu">Gpu</string>
    <string name="namepc1">Tên máy</string>
    <string name="casename">Case : abcd</string>
    <string name="ramname">Ram : 8gb ddr 4 bus 2400</string>
    <string name="hddname">Hdd : 1000gb</string>
    <string name="ssdname">Ssd : 256gb kingston</string>
    <string name="cpuname">Cpu : Intel Core i7 8700</string>
    <string name="psuname">Nguồn : 450w</string>
    <string name="vganame">Vga : Gtx 2080ti</string>
    <string name="LogOut">Log Out</string>
    <string name="tongtien">Tổng tiền: </string>
    <string name="idtongtien">ID</string>
    <string name="cart">Cart</string>
    <string name="tien">0$</string>
    <string name="thanhtoan">Thanh Toán</string>
    <string name="huy">Hủy</string>
    <string name="soluong">Số lượng: </string>
    <string name="Addcart">Thêm vào giỏ hàng</string>
    <string name="title_activity_maps">Map</string>
    <string name="diachishop">Địa chỉ</string>
</resources>
