<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.InformationActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/thongtinbanquyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="318dp"
        android:layout_height="184dp"
        android:src="@drawable/poly" />

    <TextView
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/textinformation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="16sp"
        android:layout_gravity="center"
        android:text="@string/textinformation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:text="@string/informationemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:text="@string/informationphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:text="@string/informationlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>